# granola-mcp

./: .env.example  PROJECT.md  README.md  pyproject.toml
src/: _client.py  main.py  server.py
src/granola/: config.py  request.py  types.py
src/tools/: __init__.py  notes.py  search.py  summaries.py
